// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When adding a new crossing as admin@community.floods  the new crossing should show up in the DB 1`] = `
Object {
  "crossingById": Object {
    "communities": Object {
      "nodes": Array [
        Object {
          "id": 1,
        },
      ],
    },
    "coordinates": "010100000009FA0B3D627058C03BFC3559A34E3E40",
    "description": "TEST LAND IS MAGIC!",
    "humanAddress": "In test land",
    "humanCoordinates": "30°18'25.848\\"N 97°45'21.586\\"W",
    "name": "New Crossing",
  },
}
`;

exports[`When adding a new crossing as editor@community.floods  the new crossing should show up in the DB 1`] = `
Object {
  "crossingById": Object {
    "communities": Object {
      "nodes": Array [
        Object {
          "id": 1,
        },
      ],
    },
    "coordinates": "010100000009FA0B3D627058C03BFC3559A34E3E40",
    "description": "TEST LAND IS MAGIC!",
    "humanAddress": "In test land",
    "humanCoordinates": "30°18'25.848\\"N 97°45'21.586\\"W",
    "name": "New Crossing",
  },
}
`;

exports[`When adding a new crossing as superadmin@flo.ods  the new crossing should show up in the DB 1`] = `
Object {
  "crossingById": Object {
    "communities": Object {
      "nodes": Array [
        Object {
          "id": 1,
        },
      ],
    },
    "coordinates": "010100000009FA0B3D627058C03BFC3559A34E3E40",
    "description": "TEST LAND IS MAGIC!",
    "humanAddress": "In test land",
    "humanCoordinates": "30°18'25.848\\"N 97°45'21.586\\"W",
    "name": "New Crossing",
  },
}
`;

exports[`When adding a new crossing as superadmin@flo.ods  the new crossing should show up in the DB 2`] = `
Object {
  "crossingById": Object {
    "communities": Object {
      "nodes": Array [
        Object {
          "id": 2,
        },
      ],
    },
    "coordinates": "010100000009FA0B3D627058C03BFC3559A34E3E40",
    "description": "TEST LAND IS MAGIC!",
    "humanAddress": "In test land",
    "humanCoordinates": "30°18'25.848\\"N 97°45'21.586\\"W",
    "name": "New Crossing",
  },
}
`;
